--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node app"
+    "start": "node app"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "moment-timezone": "^0.5.33",
     "mongoose": "^5.13.2",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
