--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.13.2",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
+    "node-ical": "^0.13.0",
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "serve-favicon": "^2.5.0",
