--- a/works/config.json
+++ b/works/config.json
@@ -2,5 +2,9 @@
 	"stations": {
 		"house": "stop_area%3ASNCF%3A87215699",
 		"school": "stop_area%3ASNCF%3A87212027"
-	}
+	},
+	"requestJourneys": 10,
+	"workAlarm": "053000",
+	"warmupDuration": -45,
+	"noAlarmAfterThis": "073000"
 }
